<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newResearch"
    android:background="@drawable/solid_blue">

    <TextView
        android:id="@+id/rCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <TextView
        android:id="@+id/ResearchNameText"
        android:layout_width="119dp"
        android:layout_height="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_shape_2"
        android:text="@string/research_name"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/DescribeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DescribeText"
        android:layout_width="83dp"
        android:layout_height="19dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/button_shape_2"
        android:text="@string/description"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="@+id/ResearchNameText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="157dp"
        android:layout_height="27dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/button_shape_2"
        android:text="@string/number_of_questions"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/details"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:background="@drawable/button_shape_3"
        android:onClick="editDetails"
        android:text="@string/edit_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:text="@string/project_brief"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <EditText
        android:id="@+id/qstnnum"
        android:layout_width="47dp"
        android:layout_height="48dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="200dp"
        android:autofillHints=""
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/_10"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/rName"

        android:layout_width="178dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textShortMessage"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/ResearchNameText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <EditText
        android:id="@+id/descrip"
        android:layout_width="299dp"
        android:layout_height="124dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/showID"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="152dp"
        android:text="@string/textview"
        android:textIsSelectable="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="163dp"
        android:layout_height="34dp"
        android:layout_marginTop="144dp"
        android:onClick="genID"
        android:text="generate Research ID"
        android:background="@drawable/button_shape_3"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>