<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/researcher_bg"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="377dp"
        android:layout_height="593dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="548dp"
            android:minWidth="300dp"
            android:minHeight="350dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="87dp"
                android:layout_height="27dp"
                android:text="@string/question"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="#4AA4E5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/qstnbody"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <EditText
                android:id="@+id/qstnbody"
                android:layout_width="275dp"
                android:layout_height="61dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.101" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textSize="18sp"
                android:textColor="#4AA4E5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="@+id/qstnbody"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.347" />

            <EditText
                android:id="@+id/op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="348dp"
                android:ems="10"
                android:hint="option4"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/op1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="208dp"
                android:ems="10"
                android:hint="@string/option1"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/op2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="256dp"
                android:ems="10"
                android:hint="option2"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/op3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="304dp"
                android:ems="10"
                android:hint="option3"
                android:inputType="textPersonName"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="47dp"
                android:layout_height="18dp"
                android:layout_marginEnd="268dp"
                android:text="@string/type"
                android:textColor="#4AA4E5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/op4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.775" />

            <Button
                android:id="@+id/submitDetails"
                android:layout_width="125dp"
                android:layout_height="46dp"
                android:background="@drawable/button_shape_3"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.968" />

            <RadioButton
                android:id="@+id/check"
                android:layout_width="96dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="80dp"
                android:onClick="onTypeClicked"
                android:text="@string/check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.033"
                app:layout_constraintStart_toEndOf="@+id/radio" />

            <RadioButton
                android:id="@+id/radio"
                android:layout_width="96dp"
                android:layout_height="21dp"
                android:layout_marginBottom="80dp"
                android:onClick="onTypeClicked"
                android:text="@string/radio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/text"
                android:layout_width="96dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:onClick="onTypeClicked"
                android:text="@string/text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/check"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.846" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>